cabal-version:      2.4
name:               passwordManager
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             kevbd1
maintainer:         kevbd1@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable passwordManager
    main-is:          "Main.hs"
    other-modules:    EncryptionIO
                      Encrypter
                      CSVHandler.hs
                      Lib

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: TypeApplications
                        KindSignatures
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      vector ^>=0.13.0.0,
                      finite-typelits ^>= 0.1.0.0,
                      array ^>= 0.5.0.0,
                      fixed-vector ^>= 1.2.2.1,
                      bytestring ^>= 0.11.4.0,
                      binary ^>= 0.8.9.0,
                      argon2,
                      utf8-string,
                      random,
                      random-shuffle
                      split,
                      directory,
                      http-conduit,
                      html-conduit,
                      conduit,
                      conduit-extra,
                      xml-conduit,
                      url,
                      network-uri
                      --text
    hs-source-dirs:   app
    default-language: Haskell2010
